many changes to website

--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,7 @@ input{
     outline: none;
     border: none;
 }
-.logo img{
-    width: 90px;
-}
+
 #main{
 
     width:100%;
@@ -35,7 +33,7 @@ input{
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('./images/background.png');
+    background-image: url('./images/home.png');
 }
 nav{
 	display: flex;
@@ -57,7 +55,7 @@ nav ul{
 	display: flex;
 }
 .active{
-    background-color: #00b7ff;
+    background-color: #00fff2;
     color:#ffffff;
 	box-shadow: 5px 10px 30px rgba(189, 198, 64, 0.411);
 	transition: all ease 0.2s;
@@ -73,6 +71,7 @@ nav ul li a{
 	text-transform: uppercase;
 	font-weight: 500;
 	color:#000000;
+    background-color: white;
     letter-spacing: 1px;
     border-radius: 3px;
     transition: 0.2s ease-in-out;
@@ -89,44 +88,31 @@ nav .menu-btn,
 	}
 .name{
 	font-family: 'Montserrat';
-	width: 500px;
+	width: 700px;
 	position: absolute;
     left: 22%;
-	top: 50%;
+	top: 30%;
 	transform: translate(-22%,-50%);
 }
 .name span{
-    color: #00b7ff;
+    color: #ffffff;
 }
 .name .details{
-    color: #969696;
+    color: rgb(253, 179, 42);
+    font-weight: bold;
+    font-size: 30px;
+    
 }
-.name h1{
+.name h1{   
 	font-family:'Montserrat';
 	font-size: 40px;
 	margin:0px;
 	letter-spacing: 2px;
-	color:#000000;
+	color:#12b7e9;
 }
 .header-btns{
     display: flex;
     margin-top: 40px;
-}
-.cv-btn{
-	width:110px;
-	height: 40px;
-	display: flex;
-	justify-content: center;
-    align-items: center;
-    background-color: #00b7ff;
-    box-shadow: 5px 10px 30px rgba(2, 238, 255, 0.336);
-    border-radius: 10px;
-	color:#ffffff;
-}
-.cv-btn:hover{
-	background-color: #0099ff;
-    transition: all ease 0.5s;
-    color: #ffffff;
 }
 
 .f-heading h1{
@@ -148,9 +134,9 @@ nav .menu-btn,
     margin-bottom: -80px;
 }
   #about{
-    margin-top:100px ;
+    margin-top:50px ;
 	width:100%;
-	height: 120vh;
+	height: 50vh;
 	background-color:#f3fdff;
 	box-sizing: border-box;
 	display: flex;
@@ -161,43 +147,25 @@ nav .menu-btn,
 }
 
 .about-text{
-    width: 45%;
+    width: 100%;
     color: #fff;
+    position: relative;
+    left: 40%;
     list-style: circle;
+    
 }
 .about-text h2{
-	font-size: 2rem;
+	font-size: 2rem; 
 	color:#00b7ff;
     font-weight: 500;
     margin: 0px;
 	padding: 0px;
 }
 .about-text p{
-    width: 80%;
-	font-size: 1.2rem;
-	color:#272727;
-	
-}
-.about-text button{
-    margin-top: 20px;
-	width: 140px;
-	height: 45px;
-	border-radius: 10px;
-	border: none;
-    outline: none;
-    color: #ffffff;
-	background-color:#00b7ff;
-}
-.about-text button:hover{
-	background-color: rgb(0, 132, 255);
-    transition: all ease 0.3s;
-    color: #ffffff;
-}
-.about-image{
     width: 50%;
-}
-.about-image img{
-  width: 600px;
+	font-size: 1.2rem;
+    font-family:'Times New Roman', Times, serif;
+	color: #1b7a9f;
 }
 
 #features{
@@ -222,7 +190,7 @@ nav .menu-btn,
 .a-box{
     background-color: #ffffff;
     width:300px;
-    height: 450px;
+    height: 550px;
     margin: 20px;
     border-radius: 10px;
     overflow: hidden;
@@ -232,7 +200,7 @@ nav .menu-btn,
 }
 .a-b-img{
     width: 100%;
-    height: 60%;
+    height: 40%;
 
 }
 .a-b-img img{
@@ -244,19 +212,7 @@ nav .menu-btn,
 .a-box:hover{
     box-shadow: 2px 2px 12px rgba(0,0,0,0.1);
 }
-#presentaion{
-    padding-top: 30px;
-    width:100%;
-    height:768px;
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url(images/presentation.png);
-    text-align: center;
-}
-#presentaion h1{
-font-size: 2rem;
-}
+
 #services{
     width:100%;
     height:100vh;
@@ -289,7 +245,7 @@ font-size: 2rem;
 .s-box{
     background-color: #ffffff;
     width:350px;
-    height: 470px;
+    height: 550px;
     margin: 20px;
     border-radius: 10px;
     overflow: hidden;
@@ -330,11 +286,11 @@ font-size: 2rem;
     font-family: calibri;
     display: block;
     display: -webkit-box;
-    max-width: 80%;
-    margin-top: 25px;
+    max-width: 100%;
+    margin-top: 10px;
     -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+    -webkit-box-orient: horizontal;
+    overflow: visible;
     text-overflow: ellipsis;
 }
 .s-b-text p:hover{
@@ -416,9 +372,7 @@ font-size: 2rem;
         transform: translate(-50%,-50%);
         text-align: center;
 	}
-	.about-image img{
-		height:400px;
-    }
+	
     #features{
 		height:auto;
     }
@@ -458,13 +412,7 @@ font-size: 2rem;
 		top: 50%;
 		transform: translate(-50%,-50%);
 	}
-	.about-image{
-        display:none;
-    }
-    .cv-btn{
-        margin-left: 27%;
-        margin-top: 20px;
-    }
+    
 	#about{
 		justify-content: center;
         padding-top: 0px;
@@ -479,13 +427,10 @@ font-size: 2rem;
 		font-size:4rem;
     }
     .about-text p{
-        width: 100%;
+        width: 50%;
     }
     #features{
         margin-bottom: 100px;
-    }
-	#presentaion{
-        display: none;
     }
 }
 @media(max-width:600px){
@@ -502,9 +447,7 @@ font-size: 2rem;
             height: 65px;
             padding: 0px 30px;
         }
-        .logo img{
-            width:70px;
-        }
+        
         .header-btns{
             margin: 0;
         }
@@ -539,7 +482,7 @@ font-size: 2rem;
             user-select: none;
         }
         nav .menu-icon .nav-icon{
-            background-color:#333333;
+            background-color:#faf6f6;
             display:block;
             height:2px;
             position:relative;
